fixing contrast errors

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 }
 
 .column-header {
-    color: #898989;
+    color: black;
     padding-bottom: 1em;
 }
 
